Formatting quiz and question forms for editing selected quiz/question